# jptranscription

./: .gitignore  MANIFEST.in  Pipfile  README.md  __init__.py  example.py  pyproject.toml  setup.py  text.txt  transcription.py  words.csv
jptranscription/: __init__.py
jptranscription/phonetics/: phonetizer.py  wikitionary_processor.py
jptranscription/transcription/: ipakatamapping.py  katakanizer.py
phonetics/: phonetizer.py  wikitionary_processor.py
tests/: example.py
transcription/: katakanizer.py  phonetic_mappings.py  transcribe.py  wikitionary_analyzer.py
