[project]
name = "jptranscription"
version = "0.0.1"
authors = [
  { name="Philipp Schmitz", email="schmxtz@gmail.com" },
]
description = "German into Japanese Katakana transcription"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/schmxtz/jptranscription"
Issues = "https://github.com/schmxtz/jptranscription/issues"